--- a/p8105_hw6_alc2279.Rmd
+++ b/p8105_hw6_alc2279.Rmd
@@ -4,11 +4,6 @@ author: "Annie Clark"
 date: "November 16, 2018"
 output: github_document
 ---
-Things to work on:
-
-* comments
-* question 1: figure out how to get confidence interval to work 
-* question 2: figure out lasso for building model
 
 
 ```{r}
@@ -86,7 +81,6 @@ balt_solved_logistic =
     select(Term = term, "Adj Odds Ratio" = estimate, "Adj Conf: Lower bound" = conf_low, 
            "Adj Conf: Upper bound" = conf_high) %>% 
     knitr::kable(digits = 3)
-
 ```
 
 ## Part 4: Fit a logistical regression model for each city
@@ -107,10 +101,9 @@ solved_logistic_function = function(df) {
            conf_high = exp(estimate + (1.96 * std.error)))
 }
 
-## cannot get broom::confint_tidy or broom_tidy(conf.int = TRUE) to work within funciton, therefore had to calculate standard deviations by hand
+## cannot get broom::confint_tidy or broom_tidy(conf.int = TRUE) to work within funciton, therefore had to calculate confidence intervals manually; could have also not used a function (put glm and broom::tidy in the map function), but with not being able to pull the confidence interval, it was clearer to me to put everything in a function
 
-
-homocide_odds_city_function = 
+homocide_odds_city = 
   homicide_data %>% 
   group_by(city_state) %>%       
   nest() %>% 
@@ -122,74 +115,12 @@ homocide_odds_city_function =
 ```
 
 
-```{r}
-glm_homicide_function = function(df) {
-  glm(solved ~ victim_age + victim_sex + victim_race_white, data = df, family = binomial())
-}
-
-
-homocide_odds_city = 
-  homicide_data %>% 
-  group_by(city_state) %>%       
-  nest() %>% 
-  mutate(log_models = map(.x = data, glm_homicide_function),
-         tidy_models = map(log_models, broom::tidy))  %>% 
-  select(-data, -log_models) %>% 
-  unnest() %>% 
-  janitor::clean_names() %>% 
-  mutate(conf_low = estimate - (1.96 * std_error), 
-         conf_high = estimate + (1.96 * std_error)) %>% 
-  filter(term == "victim_race_whitenonwhite") %>% 
-  select(city_state, estimate, conf_low, conf_high)
-
-
-broom_function = function(df) {
-  df %>% 
-    broom::tidy(conf.int = TRUE, exponentiate = TRUE)
-}
-
-
-  homicide_data %>% 
-  group_by(city_state) %>%       
-  nest() %>% 
-  mutate(log_models = map(.x = data, glm_homicide_function),
-         tidy_models = map(log_models, broom_function))  %>% 
-  select(-data, -log_models) %>% 
-  unnest() %>% 
-  janitor::clean_names() %>% 
-  mutate(odds_ratio = exp(estimate), 
-         conf_low = exp(conf_low), 
-         conf_high = exp(conf_high)) %>% 
-  filter(term == "victim_race_whitenonwhite") %>% 
-  select(city_state, odds_ratio, conf_low, conf_high)
-```
-
 ## Part 5: Make a plot of the models by city
 Create a plot that shows the estimated ORs and CIs for each city. Organize cities 
 according to estimated OR, and comment on the plot.
 
 ```{r}
 homocide_odds_city %>% 
-  mutate(city_state = fct_reorder(city_state, desc(estimate))) %>%
-  ggplot(aes(x = city_state, y = estimate, color = city_state)) + 
-    geom_point() +
-    geom_errorbar(aes(ymin = conf_low, ymax = conf_high, width = 0.2)) + 
-    theme(axis.text.x = element_text(angle = 60, hjust = 1),
-          legend.position = "none") + 
-    labs(
-        title = "Adjusted Odds Ratios of Non-White to Whites for Solved Homicides in 50 Large Cities",
-        x = "City, State",
-        y = "Adjusted Odds Ratio (Non-Whites to Whites)", 
-        caption = "Data from the Washington Post"
-      ) +
-    viridis::scale_color_viridis(
-      discrete = TRUE
-    )
-```
-
-
-```{r}
-homocide_odds_city_function %>% 
   mutate(city_state = fct_reorder(city_state, desc(odds_ratio))) %>%
   ggplot(aes(x = city_state, y = odds_ratio, color = city_state)) + 
     geom_point() +
@@ -206,6 +137,11 @@ homocide_odds_city_function %>%
       discrete = TRUE
     )
 ```
+
+This plot shows the adjusted odds ratio of non-whites to whites for solved homicides with 95% confidence bands. An odds ratio of 1 means that there is equal risk of having solved homicides for both whites and nonwhites. An odds ratio of less than 1 means higher risk of having solved homicides for white than nonwhites and an odds ratio of greater than 1 means higher risk of having solved homicides for nonwhites than whites. 
+
+The cities with the highest odds ratios (Tampa, Durham, Birmingham and San Bernadino) also have large confidence bands. This is consistent with these cities have a low number of solved and unsolved incidences (small observations could lead to higher variance). Of the 50 cities, there are `r homocide_odds_city %>% filter(conf_high >= 1) %>% nrow()` cities that have confidence intervals below 1, meaning that there is evidence that nonwhites have a lower proportion of unsolved homicides than whites (with 95% confidence). The cities with the lowest odds ratios also have very narrow confidence bands, meaning that there is great certainty that in these cities (Boston, Ohmaha, Oakland, Pitssburgh), there is great evidence that cases of nonwhite victims go more unsolved than cases with white victims. 
+
 
 # Problem 2
 In this probelm, you will analyze data gathered to understand the effects of several 
@@ -252,8 +188,10 @@ birthweight_data = read_csv(file = "./data/birthweight.csv") %>%
          malform = as.factor(malform)) %>% 
   select(bwt, everything())
 
-skimr::skim(birthweight_data)
-## no missing data
+##birthweight_data %>% 
+##  skimr::skim()
+
+## not evaluating this because it does not render well in github; this shows that there are no missing values in any of the variables
 ```
 
 ## Part 2: Fit a regression model predicting birthweight
@@ -265,15 +203,13 @@ plot of model residuals against fitted values – use add_predictions and add_re
 in making this plot.
 
 ```{r}
-
 ##based on hypothesis, not data driven
 
-
-birthweight_model_function = function(df) {
+btw_model_hyp = function(df) {
   lm(bwt ~ bhead + blength + delwt + gaweeks, data = df)
 }
 
-birthweight_model = birthweight_model_function(birthweight_data)
+birthweight_model = btw_model_hyp(birthweight_data)
 
   
 birthweight_data %>% 
@@ -288,73 +224,9 @@ birthweight_data %>%
       )
 ```
 
+I chose to build my model as though I was the investigator, not necessarily the data scientist. I hypothesized a model based on the variables that I thought would be the best predictors of birthweight. This model includes baby head cirumference, baby length, mother's weight at delivery, and gestational age (weeks). Because this was purely hypothesize driven, no techniques were used for variable selection, etc. 
 
-```{r, eval = FALSE}
-##trying lasso
-
-birthweight_lasso = glmnet(birthweight_data, birthweight_data$bwt, alpha = 1, lambda = lambda)
-
-?glmnet
-
-x = model.matrix(bwt ~ ., data = birthweight_data)[, -1]
-y = birthweight_data$bwt
-lasso.mod = glmnet(as.matrix(x), y, alpha = 1)
-
-x <- model.matrix(Sepal.Length~., iris)[,-1]
-y <- iris$Sepal.Length
-mod <- cv.glmnet(as.matrix(x), y, alpha=1)
-
-as.matrix(coef(lasso.mod, lasso.mod$lambda.min))
-
-
-require(glmnet)
-
-ezlasso=function(df,yvar,folds=10,trace=F,alpha=1){
-  x<-model.matrix(as.formula(paste(yvar,"~.")),data=df)
-  x=x[,-1] ##remove intercept
-
-  glmnet1<-glmnet::cv.glmnet(x=x,y=df[,yvar],type.measure='mse',nfolds=folds,alpha=alpha)
-
-  co<-coef(glmnet1,s = "lambda.1se")
-  inds<-which(co!=0)
-  variables<-row.names(co)[inds]
-  variables<-variables[!(variables %in% '(Intercept)')];
-  return( c(yvar,variables));
-}
-
-ezlasso(birthweight_data, birthweight_data$bwt)
-
-
-ezlasso=function(df,yvar,folds=10,trace=F,alpha=1){
-  x<-model.matrix(as.formula(paste(yvar,"~.")),data=df)
-  x=x[,-1] ##remove intercept
-
-  glmnet1<-glmnet::cv.glmnet(x=x,y=df[,yvar],type.measure='mse',nfolds=folds,alpha=alpha)
-
-  co<-coef(glmnet1,s = "lambda.1se")
-  inds<-which(co!=0)
-  variables<-row.names(co)[inds]
-  variables<-variables[!(variables %in% '(Intercept)')];
-  return( c(yvar,variables));
-}
-
-x = model.matrix(bwt ~ ., data = birthweight_data)[, -1]
-y = birthweight_data$bwt
-lasso.mod = glmnet(as.matrix(x), y, alpha = 1)
-
-plot(lasso.mod, xvar = "lambda")
-
-
-coef(lasso.mod, s = 100)
-
-crossval <-  cv.glmnet(x = X, y = y)
-plot(crossval)
-penalty <- crossval$lambda.min #optimal lambda
-penalty #minimal shrinkage
-fit1 <-glmnet(x = X, y = y, alpha = 1, lambda = penalty ) #estimate the model with that
-coef(fit1)
-```
-
+When graphing the residuals vs. predicted, we see a heavy cluster in the lower right corner on the graph, with a tail fanning out to the top left. This is not necessarily what we want to see in this plot (which is a random scatter). After seeing this plot, I would be interested in possibly doing a transformation, or try other variables in the model. 
 
 ## Part 3: Create additional models and compare using cross validation
 
@@ -364,45 +236,52 @@ Compare your model to two others:
 * One using head circumference, length, sex, and all interactions (including the 
 three-way interaction) between these
 
+Make this comparison in terms of the cross-validated prediction error; use 
+crossv_mc and functions in purrr as appropriate.
+
 ```{r}
-birthweight_model_alt1_function = function(df) {
+## create additional models
+
+btw_model_sml = function(df) {
   lm(bwt ~ blength + gaweeks, data = df)
 }
 
-## birthweight_model_alt1_function(birthweight_data)
-
-birthweight_model_alt2_function = function(df) {
+btw_model_int = function(df) {
   lm(bwt ~ bhead + blength + babysex +
        (bhead * blength) + (bhead * babysex) + (blength * babysex) +
        (bhead * blength * babysex), data = df)
 }
 
-## birthweight_model_alt2_function(birthweight_data)
-
 ```
 
-Make this comparison in terms of the cross-validated prediction error; use 
-crossv_mc and functions in purrr as appropriate.
 
 ```{r}
+## cross validation
+
+## split data and run three models on each split
+
+set.seed(10)
+
 cv_birthweight = 
   crossv_mc(birthweight_data, 100) 
 
 cv_birthweight = 
   cv_birthweight %>% 
-  mutate(birthweight_model = map(train, birthweight_model_function),
-         birthweight_model_alt1 = map(train, birthweight_model_alt1_function),
-         birthweight_model_alt2 = map(train, birthweight_model_alt2_function)) %>% 
-  mutate(rmse_birthweight_model = map2_dbl(birthweight_model, test, ~rmse(model = .x, data = .y)),
-         rmse_birthweight_model_alt1 = map2_dbl(birthweight_model_alt1, test, ~rmse(model = .x, data = .y)),
-         rmse_birthweight_model_alt2 = map2_dbl(birthweight_model_alt2, test, ~rmse(model = .x, data = .y)))
+  mutate(btw_model_hyp = map(train, btw_model_hyp),
+         btw_model_sml = map(train, btw_model_sml),
+         btw_model_int = map(train, btw_model_int)) %>% 
+  mutate(rmse_btw_model_hyp = map2_dbl(btw_model_hyp, test, ~rmse(model = .x, data = .y)),
+         rmse_btw_model_sml = map2_dbl(btw_model_sml, test, ~rmse(model = .x, data = .y)),
+         rmse_btw_model_int = map2_dbl(btw_model_int, test, ~rmse(model = .x, data = .y)))
 
 
-
+## visualize RMSEs by model
 cv_birthweight %>% 
   select(starts_with("rmse")) %>% 
   gather(key = model, value = rmse) %>% 
   mutate(model = str_replace(model, "rmse_", ""),
+         model = recode(model, btw_model_hyp = "Hypothesized", btw_model_sml = "Small",
+                        btw_model_int = "Interaction"), 
          model = fct_inorder(model)) %>% 
   ggplot(aes(x = model, y = rmse, color = model)) + 
   geom_violin() +
@@ -417,3 +296,4 @@ cv_birthweight %>%
     )
 ```
 
+When comparing the hypothesized, small and interaction models, the hypothesized model is the clear winner because it has the smallest RMSE. The small model has the largest RMSEs and the interaction model has RMSEs similar (but not as low) to the hypothesized model. But because the interaction model is so much harder to interpret, the hypothesized model is a much better choice to use. 
