--- a/p8105_hw6_alc2279.md
+++ b/p8105_hw6_alc2279.md
@@ -3,24 +3,18 @@ P8105 Homework 6: Linear Models
 Annie Clark
 November 16, 2018
 
-Things to work on:
-
--   comments
--   question 1: figure out how to get confidence interval to work
--   question 2: figure out lasso for building model
-
 ``` r
 library(tidyverse)
 ```
 
-    ## -- Attaching packages -------------------------------------------------------------------- tidyverse 1.2.1 --
+    ## -- Attaching packages ----------------------------------------------------------------------------------------------- tidyverse 1.2.1 --
 
     ## v ggplot2 3.0.0     v purrr   0.2.5
     ## v tibble  1.4.2     v dplyr   0.7.6
     ## v tidyr   0.8.1     v stringr 1.3.1
     ## v readr   1.1.1     v forcats 0.3.0
 
-    ## -- Conflicts ----------------------------------------------------------------------- tidyverse_conflicts() --
+    ## -- Conflicts -------------------------------------------------------------------------------------------------- tidyverse_conflicts() --
     ## x dplyr::filter() masks stats::filter()
     ## x dplyr::lag()    masks stats::lag()
 
@@ -145,10 +139,9 @@ solved_logistic_function = function(df) {
            conf_high = exp(estimate + (1.96 * std.error)))
 }
 
-## cannot get broom::confint_tidy or broom_tidy(conf.int = TRUE) to work within funciton, therefore had to calculate standard deviations by hand
+## cannot get broom::confint_tidy or broom_tidy(conf.int = TRUE) to work within funciton, therefore had to calculate confidence intervals manually; could have also not used a function (put glm and broom::tidy in the map function), but with not being able to pull the confidence interval, it was clearer to me to put everything in a function
 
-
-homocide_odds_city_function = 
+homocide_odds_city = 
   homicide_data %>% 
   group_by(city_state) %>%       
   nest() %>% 
@@ -159,559 +152,6 @@ homocide_odds_city_function =
   select(city_state, odds_ratio, conf_low, conf_high)
 ```
 
-``` r
-glm_homicide_function = function(df) {
-  glm(solved ~ victim_age + victim_sex + victim_race_white, data = df, family = binomial())
-}
-
-
-homocide_odds_city = 
-  homicide_data %>% 
-  group_by(city_state) %>%       
-  nest() %>% 
-  mutate(log_models = map(.x = data, glm_homicide_function),
-         tidy_models = map(log_models, broom::tidy))  %>% 
-  select(-data, -log_models) %>% 
-  unnest() %>% 
-  janitor::clean_names() %>% 
-  mutate(conf_low = estimate - (1.96 * std_error), 
-         conf_high = estimate + (1.96 * std_error)) %>% 
-  filter(term == "victim_race_whitenonwhite") %>% 
-  select(city_state, estimate, conf_low, conf_high)
-
-
-broom_function = function(df) {
-  df %>% 
-    broom::tidy(conf.int = TRUE, exponentiate = TRUE)
-}
-
-
-  homicide_data %>% 
-  group_by(city_state) %>%       
-  nest() %>% 
-  mutate(log_models = map(.x = data, glm_homicide_function),
-         tidy_models = map(log_models, broom_function))  %>% 
-  select(-data, -log_models) %>% 
-  unnest() %>% 
-  janitor::clean_names() %>% 
-  mutate(odds_ratio = exp(estimate), 
-         conf_low = exp(conf_low), 
-         conf_high = exp(conf_high)) %>% 
-  filter(term == "victim_race_whitenonwhite") %>% 
-  select(city_state, odds_ratio, conf_low, conf_high)
-```
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## Warning: glm.fit: fitted probabilities numerically 0 or 1 occurred
-
-    ## # A tibble: 47 x 4
-    ##    city_state      odds_ratio conf_low conf_high
-    ##    <chr>                <dbl>    <dbl>     <dbl>
-    ##  1 Albuquerque, NM       1.99     1.52      3.08
-    ##  2 Atlanta, GA           2.15     1.54      3.75
-    ##  3 Baltimore, MD         1.57     1.38      1.89
-    ##  4 Baton Rouge, LA       1.93     1.35      3.97
-    ##  5 Birmingham, AL        2.85     1.86      5.81
-    ##  6 Boston, MA            1.13     1.05      1.31
-    ##  7 Buffalo, NY           1.56     1.27      2.25
-    ##  8 Charlotte, NC         1.74     1.37      2.54
-    ##  9 Chicago, IL           1.78     1.56      2.12
-    ## 10 Cincinnati, OH        1.39     1.20      1.74
-    ## # ... with 37 more rows
-
 Part 5: Make a plot of the models by city
 -----------------------------------------
 
@@ -719,27 +159,6 @@ Create a plot that shows the estimated ORs and CIs for each city. Organize citie
 
 ``` r
 homocide_odds_city %>% 
-  mutate(city_state = fct_reorder(city_state, desc(estimate))) %>%
-  ggplot(aes(x = city_state, y = estimate, color = city_state)) + 
-    geom_point() +
-    geom_errorbar(aes(ymin = conf_low, ymax = conf_high, width = 0.2)) + 
-    theme(axis.text.x = element_text(angle = 60, hjust = 1),
-          legend.position = "none") + 
-    labs(
-        title = "Adjusted Odds Ratios of Non-White to Whites for Solved Homicides in 50 Large Cities",
-        x = "City, State",
-        y = "Adjusted Odds Ratio (Non-Whites to Whites)", 
-        caption = "Data from the Washington Post"
-      ) +
-    viridis::scale_color_viridis(
-      discrete = TRUE
-    )
-```
-
-![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-7-1.png)
-
-``` r
-homocide_odds_city_function %>% 
   mutate(city_state = fct_reorder(city_state, desc(odds_ratio))) %>%
   ggplot(aes(x = city_state, y = odds_ratio, color = city_state)) + 
     geom_point() +
@@ -757,7 +176,11 @@ homocide_odds_city_function %>%
     )
 ```
 
-![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-8-1.png)
+![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-6-1.png)
+
+This plot shows the adjusted odds ratio of non-whites to whites for solved homicides with 95% confidence bands. An odds ratio of 1 means that there is equal risk of having solved homicides for both whites and nonwhites. An odds ratio of less than 1 means higher risk of having solved homicides for white than nonwhites and an odds ratio of greater than 1 means higher risk of having solved homicides for nonwhites than whites.
+
+The cities with the highest odds ratios (Tampa, Durham, Birmingham and San Bernadino) also have large confidence bands. This is consistent with these cities have a low number of solved and unsolved incidences (small observations could lead to higher variance). Of the 50 cities, there are 24 cities that have confidence intervals below 1, meaning that there is evidence that nonwhites have a lower proportion of unsolved homicides than whites (with 95% confidence). The cities with the lowest odds ratios also have very narrow confidence bands, meaning that there is great certainty that in these cities (Boston, Ohmaha, Oakland, Pitssburgh), there is great evidence that cases of nonwhite victims go more unsolved than cases with white victims.
 
 Problem 2
 =========
@@ -816,67 +239,10 @@ birthweight_data = read_csv(file = "./data/birthweight.csv") %>%
     ## See spec(...) for full column specifications.
 
 ``` r
-skimr::skim(birthweight_data)
-```
+##birthweight_data %>% 
+##  skimr::skim()
 
-    ## Skim summary statistics
-    ##  n obs: 4342 
-    ##  n variables: 20 
-    ## 
-    ## -- Variable type:factor -------------------------------------------------------------------------------------
-    ##  variable missing complete    n n_unique
-    ##   babysex       0     4342 4342        2
-    ##     frace       0     4342 4342        5
-    ##   malform       0     4342 4342        2
-    ##     mrace       0     4342 4342        4
-    ##                               top_counts ordered
-    ##              mal: 2230, fem: 2112, NA: 0   FALSE
-    ##  whi: 2123, bla: 1911, pue: 248, asi: 46   FALSE
-    ##                    0: 4327, 1: 15, NA: 0   FALSE
-    ##  whi: 2147, bla: 1909, pue: 243, asi: 43   FALSE
-    ## 
-    ## -- Variable type:integer ------------------------------------------------------------------------------------
-    ##  variable missing complete    n      mean     sd  p0  p25    p50  p75 p100
-    ##     bhead       0     4342 4342   33.65     1.62  21   33   34     35   41
-    ##   blength       0     4342 4342   49.75     2.72  20   48   50     51   63
-    ##       bwt       0     4342 4342 3114.4    512.15 595 2807 3132.5 3459 4791
-    ##     delwt       0     4342 4342  145.57    22.21  86  131  143    157  334
-    ##   fincome       0     4342 4342   44.11    25.98   0   25   35     65   96
-    ##  menarche       0     4342 4342   12.51     1.48   0   12   12     13   19
-    ##   mheight       0     4342 4342   63.49     2.66  48   62   63     65   77
-    ##    momage       0     4342 4342   20.3      3.88  12   18   20     22   44
-    ##    parity       0     4342 4342    0.0023   0.1    0    0    0      0    6
-    ##   pnumlbw       0     4342 4342    0        0      0    0    0      0    0
-    ##   pnumsga       0     4342 4342    0        0      0    0    0      0    0
-    ##      ppwt       0     4342 4342  123.49    20.16  70  110  120    134  287
-    ##    wtgain       0     4342 4342   22.08    10.94 -46   15   22     28   89
-    ##      hist
-    ##  <U+2581><U+2581><U+2581><U+2581><U+2585><U+2587><U+2581><U+2581>
-    ##  <U+2581><U+2581><U+2581><U+2581><U+2581><U+2587><U+2581><U+2581>
-    ##  <U+2581><U+2581><U+2581><U+2583><U+2587><U+2587><U+2582><U+2581>
-    ##  <U+2581><U+2587><U+2585><U+2581><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2581><U+2582><U+2587><U+2582><U+2582><U+2582><U+2581><U+2583>
-    ##  <U+2581><U+2581><U+2581><U+2581><U+2582><U+2587><U+2581><U+2581>
-    ##  <U+2581><U+2581><U+2581><U+2585><U+2587><U+2582><U+2581><U+2581>
-    ##  <U+2582><U+2587><U+2585><U+2582><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2581><U+2581><U+2581><U+2587><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2581><U+2581><U+2581><U+2587><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2581><U+2587><U+2586><U+2581><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2581><U+2581><U+2581><U+2587><U+2587><U+2581><U+2581><U+2581>
-    ## 
-    ## -- Variable type:numeric ------------------------------------------------------------------------------------
-    ##  variable missing complete    n  mean   sd    p0   p25   p50   p75 p100
-    ##   gaweeks       0     4342 4342 39.43 3.15 17.7  38.3  39.9  41.1  51.3
-    ##     ppbmi       0     4342 4342 21.57 3.18 13.07 19.53 21.03 22.91 46.1
-    ##    smoken       0     4342 4342  4.15 7.41  0     0     0     5    60  
-    ##      hist
-    ##  <U+2581><U+2581><U+2581><U+2581><U+2583><U+2587><U+2581><U+2581>
-    ##  <U+2581><U+2587><U+2585><U+2581><U+2581><U+2581><U+2581><U+2581>
-    ##  <U+2587><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581><U+2581>
-
-``` r
-## no missing data
+## not evaluating this because it does not render well in github; this shows that there are no missing values in any of the variables
 ```
 
 Part 2: Fit a regression model predicting birthweight
@@ -887,12 +253,11 @@ Propose a regression model for birthweight. This model may be based on a hypothe
 ``` r
 ##based on hypothesis, not data driven
 
-
-birthweight_model_function = function(df) {
+btw_model_hyp = function(df) {
   lm(bwt ~ bhead + blength + delwt + gaweeks, data = df)
 }
 
-birthweight_model = birthweight_model_function(birthweight_data)
+birthweight_model = btw_model_hyp(birthweight_data)
 
   
 birthweight_data %>% 
@@ -907,73 +272,11 @@ birthweight_data %>%
       )
 ```
 
-![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-10-1.png)
+![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-8-1.png)
 
-``` r
-##trying lasso
+I chose to build my model as though I was the investigator, not necessarily the data scientist. I hypothesized a model based on the variables that I thought would be the best predictors of birthweight. This model includes baby head cirumference, baby length, mother's weight at delivery, and gestational age (weeks). Because this was purely hypothesize driven, no techniques were used for variable selection, etc.
 
-birthweight_lasso = glmnet(birthweight_data, birthweight_data$bwt, alpha = 1, lambda = lambda)
-
-?glmnet
-
-x = model.matrix(bwt ~ ., data = birthweight_data)[, -1]
-y = birthweight_data$bwt
-lasso.mod = glmnet(as.matrix(x), y, alpha = 1)
-
-x <- model.matrix(Sepal.Length~., iris)[,-1]
-y <- iris$Sepal.Length
-mod <- cv.glmnet(as.matrix(x), y, alpha=1)
-
-as.matrix(coef(lasso.mod, lasso.mod$lambda.min))
-
-
-require(glmnet)
-
-ezlasso=function(df,yvar,folds=10,trace=F,alpha=1){
-  x<-model.matrix(as.formula(paste(yvar,"~.")),data=df)
-  x=x[,-1] ##remove intercept
-
-  glmnet1<-glmnet::cv.glmnet(x=x,y=df[,yvar],type.measure='mse',nfolds=folds,alpha=alpha)
-
-  co<-coef(glmnet1,s = "lambda.1se")
-  inds<-which(co!=0)
-  variables<-row.names(co)[inds]
-  variables<-variables[!(variables %in% '(Intercept)')];
-  return( c(yvar,variables));
-}
-
-ezlasso(birthweight_data, birthweight_data$bwt)
-
-
-ezlasso=function(df,yvar,folds=10,trace=F,alpha=1){
-  x<-model.matrix(as.formula(paste(yvar,"~.")),data=df)
-  x=x[,-1] ##remove intercept
-
-  glmnet1<-glmnet::cv.glmnet(x=x,y=df[,yvar],type.measure='mse',nfolds=folds,alpha=alpha)
-
-  co<-coef(glmnet1,s = "lambda.1se")
-  inds<-which(co!=0)
-  variables<-row.names(co)[inds]
-  variables<-variables[!(variables %in% '(Intercept)')];
-  return( c(yvar,variables));
-}
-
-x = model.matrix(bwt ~ ., data = birthweight_data)[, -1]
-y = birthweight_data$bwt
-lasso.mod = glmnet(as.matrix(x), y, alpha = 1)
-
-plot(lasso.mod, xvar = "lambda")
-
-
-coef(lasso.mod, s = 100)
-
-crossval <-  cv.glmnet(x = X, y = y)
-plot(crossval)
-penalty <- crossval$lambda.min #optimal lambda
-penalty #minimal shrinkage
-fit1 <-glmnet(x = X, y = y, alpha = 1, lambda = penalty ) #estimate the model with that
-coef(fit1)
-```
+When graphing the residuals vs. predicted, we see a heavy cluster in the lower right corner on the graph, with a tail fanning out to the top left. This is not necessarily what we want to see in this plot (which is a random scatter). After seeing this plot, I would be interested in possibly doing a transformation, or try other variables in the model.
 
 Part 3: Create additional models and compare using cross validation
 -------------------------------------------------------------------
@@ -983,43 +286,49 @@ Compare your model to two others:
 -   One using length at birth and gestational age as predictors (main effects only)
 -   One using head circumference, length, sex, and all interactions (including the three-way interaction) between these
 
+Make this comparison in terms of the cross-validated prediction error; use crossv\_mc and functions in purrr as appropriate.
+
 ``` r
-birthweight_model_alt1_function = function(df) {
+## create additional models
+
+btw_model_sml = function(df) {
   lm(bwt ~ blength + gaweeks, data = df)
 }
 
-## birthweight_model_alt1_function(birthweight_data)
-
-birthweight_model_alt2_function = function(df) {
+btw_model_int = function(df) {
   lm(bwt ~ bhead + blength + babysex +
        (bhead * blength) + (bhead * babysex) + (blength * babysex) +
        (bhead * blength * babysex), data = df)
 }
-
-## birthweight_model_alt2_function(birthweight_data)
 ```
 
-Make this comparison in terms of the cross-validated prediction error; use crossv\_mc and functions in purrr as appropriate.
-
 ``` r
+## cross validation
+
+## split data and run three models on each split
+
+set.seed(10)
+
 cv_birthweight = 
   crossv_mc(birthweight_data, 100) 
 
 cv_birthweight = 
   cv_birthweight %>% 
-  mutate(birthweight_model = map(train, birthweight_model_function),
-         birthweight_model_alt1 = map(train, birthweight_model_alt1_function),
-         birthweight_model_alt2 = map(train, birthweight_model_alt2_function)) %>% 
-  mutate(rmse_birthweight_model = map2_dbl(birthweight_model, test, ~rmse(model = .x, data = .y)),
-         rmse_birthweight_model_alt1 = map2_dbl(birthweight_model_alt1, test, ~rmse(model = .x, data = .y)),
-         rmse_birthweight_model_alt2 = map2_dbl(birthweight_model_alt2, test, ~rmse(model = .x, data = .y)))
+  mutate(btw_model_hyp = map(train, btw_model_hyp),
+         btw_model_sml = map(train, btw_model_sml),
+         btw_model_int = map(train, btw_model_int)) %>% 
+  mutate(rmse_btw_model_hyp = map2_dbl(btw_model_hyp, test, ~rmse(model = .x, data = .y)),
+         rmse_btw_model_sml = map2_dbl(btw_model_sml, test, ~rmse(model = .x, data = .y)),
+         rmse_btw_model_int = map2_dbl(btw_model_int, test, ~rmse(model = .x, data = .y)))
 
 
-
+## visualize RMSEs by model
 cv_birthweight %>% 
   select(starts_with("rmse")) %>% 
   gather(key = model, value = rmse) %>% 
   mutate(model = str_replace(model, "rmse_", ""),
+         model = recode(model, btw_model_hyp = "Hypothesized", btw_model_sml = "Small",
+                        btw_model_int = "Interaction"), 
          model = fct_inorder(model)) %>% 
   ggplot(aes(x = model, y = rmse, color = model)) + 
   geom_violin() +
@@ -1034,4 +343,6 @@ cv_birthweight %>%
     )
 ```
 
-![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-13-1.png)
+![](p8105_hw6_alc2279_files/figure-markdown_github/unnamed-chunk-10-1.png)
+
+When comparing the hypothesized, small and interaction models, the hypothesized model is the clear winner because it has the smallest RMSE. The small model has the largest RMSEs and the interaction model has RMSEs similar (but not as low) to the hypothesized model. But because the interaction model is so much harder to interpret, the hypothesized model is a much better choice to use.
